init: add babel for es6, routes controller

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
     "rules": {
         "indent": [
             "error",
-            "tab"
+            "tab",
+            4
         ],
         "linebreak-style": [
             "error",
