--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.4",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.6.9",
+    "mongoose": "^5.12.12",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^7.27.0"
