--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.4",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.12",
