--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.4",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.12",
     "pug": "^3.0.2"
