--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.4",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.12",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "qs": "^6.7.0"
   },
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "eslint": "^7.27.0"
   }
 }
