refactor: configure eslint and format files accordingly

--- a/client/src/.eslintrc.json
+++ b/client/src/.eslintrc.json
@@ -11,8 +11,7 @@
     },
     "rules": {
         "indent": [
-            "error",
-            "tab",
+            "warn",
             4
         ],
         "linebreak-style": [
