--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongodb": "^3.6.9",
