init: add express-ws dependency

--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-ws": "^5.0.2",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.12",
     "pug": "^3.0.2",
-    "qs": "^6.7.0",
-    "ws": "^8.2.3"
+    "qs": "^6.7.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
